@@ -1,3 +1,4 @@
+* Manage custom login process
 * Add clear icon on Many2One
 * Re-position icons on Many2One widget
 
